--- a/src/main/resources/static/fxml/myProfile.fxml
+++ b/src/main/resources/static/fxml/myProfile.fxml
@@ -2,20 +2,22 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.controller.MyProfileController">
-    <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"  />
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek21.controller.MyProfileController">
+    <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
    <VBox layoutY="35.0" prefHeight="365.0" prefWidth="600.0">
       <children>
          <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="600.0">
             <children>
                <Label text="Hello, " />
-               <Label fx:id="userName" prefHeight="18.0" prefWidth="245.0" />
+               <Label fx:id="userNameBig" prefHeight="18.0" prefWidth="245.0" />
                <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="210.0" text="Account Balance : " textAlignment="RIGHT" />
                <Label fx:id="balance" prefHeight="18.0" prefWidth="74.0" />
             </children>
@@ -27,7 +29,110 @@
            <panes>
              <TitledPane animated="false" prefHeight="89.0" prefWidth="600.0" text="Login &amp; Security">
                   <content>
-                     <VBox prefHeight="200.0" prefWidth="100.0" />
+                     <HBox prefHeight="100.0" prefWidth="200.0">
+                        <children>
+                           <VBox prefHeight="229.0" prefWidth="177.0">
+                              <children>
+                                 <Pane prefHeight="30.0" prefWidth="165.0" />
+                                 <Pane prefHeight="30.0" prefWidth="165.0" />
+                                 <Pane prefHeight="31.0" prefWidth="165.0" />
+                                 <Pane prefHeight="30.0" prefWidth="165.0" />
+                                 <Pane prefHeight="30.0" prefWidth="165.0" />
+                                 <Pane prefHeight="30.0" prefWidth="165.0" />
+                                 <Pane prefHeight="30.0" prefWidth="165.0" />
+                                 <Pane prefHeight="30.0" prefWidth="165.0" />
+                              </children>
+                           </VBox>
+                           <VBox prefHeight="229.0" prefWidth="190.0">
+                              <children>
+                                 <Pane prefHeight="30.0" prefWidth="178.0">
+                                    <children>
+                                       <Label fx:id="userName" layoutX="34.0" layoutY="6.0" text="Label" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="178.0">
+                                    <children>
+                                       <Label fx:id="password" layoutX="39.0" layoutY="6.0" text="Label" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="178.0">
+                                    <children>
+                                       <Label fx:id="lastName" layoutX="54.0" layoutY="6.0" text="Label" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="178.0">
+                                    <children>
+                                       <Label fx:id="firstName" layoutX="44.0" layoutY="7.0" text="Label" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="178.0">
+                                    <children>
+                                       <Label fx:id="email" layoutX="52.0" layoutY="8.0" text="Label" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="178.0">
+                                    <children>
+                                       <Label fx:id="adress" layoutX="45.0" layoutY="5.0" text="Label" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="178.0">
+                                    <children>
+                                       <Label fx:id="zip" layoutX="48.0" layoutY="6.0" text="Label" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="178.0">
+                                    <children>
+                                       <Label fx:id="city" layoutX="44.0" layoutY="5.0" text="Label" />
+                                    </children>
+                                 </Pane>
+                              </children>
+                           </VBox>
+                           <VBox prefHeight="229.0" prefWidth="177.0">
+                              <children>
+                                 <Pane prefHeight="30.0" prefWidth="165.0">
+                                    <children>
+                                       <Button fx:id="modifyUserName" layoutX="63.0" layoutY="2.0" mnemonicParsing="false" text="Modifier" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="165.0">
+                                    <children>
+                                       <Button fx:id="modifyPassword" layoutX="76.0" layoutY="2.0" mnemonicParsing="false" text="Modifier" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="31.0" prefWidth="165.0">
+                                    <children>
+                                       <Button fx:id="modifyLastName" layoutX="63.0" layoutY="2.0" mnemonicParsing="false" text="Modifier" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="165.0">
+                                    <children>
+                                       <Button fx:id="modifyFirstName" layoutX="70.0" layoutY="-2.0" mnemonicParsing="false" text="Modifier" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="165.0">
+                                    <children>
+                                       <Button fx:id="modifyEmail" layoutX="58.0" layoutY="1.0" mnemonicParsing="false" text="Modifier" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="165.0">
+                                    <children>
+                                       <Button fx:id="modifyAdress" layoutX="65.0" layoutY="2.0" mnemonicParsing="false" text="Modifier" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="165.0">
+                                    <children>
+                                       <Button fx:id="modifyZip" layoutX="66.0" layoutY="2.0" mnemonicParsing="false" text="Modifier" />
+                                    </children>
+                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="165.0">
+                                    <children>
+                                       <Button fx:id="modifyCity" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" text="Modifier" />
+                                    </children>
+                                 </Pane>
+                              </children>
+                           </VBox>
+                        </children>
+                     </HBox>
                   </content>
                </TitledPane>
                <TitledPane animated="false" text="Your Offers">
