--- a/src/main/resources/static/fxml/form-new-offer.fxml
+++ b/src/main/resources/static/fxml/form-new-offer.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.example.codingweek.*?>
+<?import com.example.codingweek.javafxComponent.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<?import com.example.codingweek.javafxComponent.ComboPanel?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.NewOfferController">
     <children>
         <Label layoutX="273.0" layoutY="37.0" text="New offer" />
@@ -67,7 +66,7 @@
                         </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="252.0">
                      <children>
-                        <ComboPanel fx:id="themeComboBox" prefWidth="300" />
+                        <ComboPanel fx:id="themeComboPanel" prefWidth="300" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="252.0">
@@ -84,11 +83,12 @@
                 </VBox>
             </children>
         </HBox>
-      <Button fx:id="newOfferButton" layoutX="273.0" layoutY="332.0" mnemonicParsing="false" text="Submit" />
-      <Button fx:id="newOfferToOffersButton" layoutX="37.0" layoutY="33.0" mnemonicParsing="false" text="←">
+      <Button fx:id="newOfferButton" layoutX="273.0" layoutY="332.0" mnemonicParsing="false"  onMouseClicked="#submit" text="Submit" />
+      <Button fx:id="newOfferToOffersButton" layoutX="37.0" layoutY="33.0" mnemonicParsing="false" onMouseClicked="#goHome" text="←">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
+      <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="282.0" layoutY="62.0" textFill="RED" />
     </children>
 </AnchorPane>
