--- a/src/main/resources/static/fxml/layout.fxml
+++ b/src/main/resources/static/fxml/layout.fxml
@@ -3,15 +3,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox prefHeight="36.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.LayoutController">
+<HBox prefHeight="36.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.LayoutController">
 
     <children>
-      <ToolBar prefHeight="36.0" prefWidth="607.0">
-         <items>
-            <Label fx:id="goToProfile" onMouseClicked="#goToProfile" text="myProfile" />
-            <Label fx:id="goToOffers" onMouseClicked="#goToOffers" text="Offers" />
-             <Label fx:id="logOut" onMouseClicked="#logout" text="Log-out" />
-         </items>
-      </ToolBar>
-   </children>
+        <ToolBar prefHeight="36.0" prefWidth="607.0">
+            <items>
+                <Label fx:id="goToProfile" onMouseClicked="#goToProfile" text="myProfile" />
+                <Label fx:id="goToOffers" onMouseClicked="#goToAllOffers" text="Offers" />
+                <Label fx:id="createOffer" onMouseClicked="#goToOffers" text="New Offer" />
+                <Label fx:id="logOut" alignment="TOP_RIGHT" onMouseClicked="#logout" text="Log-out" />
+            </items>
+        </ToolBar>
+    </children>
 </HBox>
