--- a/src/main/resources/static/fxml/form-new-offer.fxml
+++ b/src/main/resources/static/fxml/form-new-offer.fxml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.example.codingweek.javafxComponent.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.NewOfferController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.NewOfferController">
     <children>
-        <Label layoutX="273.0" layoutY="37.0" text="New offer" />
-        <HBox layoutX="124.0" layoutY="80.0" prefHeight="235.0" prefWidth="352.0">
+        <Label layoutX="513.0" layoutY="119.0" text="New offer" />
+        <HBox layoutX="305.0" layoutY="240.0" prefHeight="275.0" prefWidth="411.0">
             <children>
-                <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0">
+                <VBox alignment="TOP_RIGHT" prefHeight="275.0" prefWidth="137.0">
                     <children>
                         <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="100.0">
                             <children>
@@ -38,6 +43,11 @@
                                 <Label text="Price :  " />
                             </children>
                         </HBox>
+                  <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="138.0">
+                     <children>
+                        <Label text="Image (Optional) :  " />
+                     </children>
+                  </HBox>
                     </children>
                 </VBox>
                 <VBox prefHeight="254.0" prefWidth="252.0">
@@ -79,11 +89,16 @@
                         </Label>
                      </children>
                   </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="252.0">
+                     <children>
+                        <Button mnemonicParsing="false" text="+" />
+                     </children>
+                  </HBox>
                     </children>
                 </VBox>
             </children>
         </HBox>
-      <Button fx:id="newOfferButton" layoutX="273.0" layoutY="332.0" mnemonicParsing="false"  onMouseClicked="#submit" text="Submit" />
+      <Button fx:id="newOfferButton" layoutX="513.0" layoutY="550.0" mnemonicParsing="false" onMouseClicked="#submit" text="Submit" />
       <Button fx:id="newOfferToOffersButton" layoutX="37.0" layoutY="33.0" mnemonicParsing="false" onMouseClicked="#goHome" text="←">
          <font>
             <Font size="15.0" />
