--- a/src/main/resources/static/fxml/myProfile.fxml
+++ b/src/main/resources/static/fxml/myProfile.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -160,11 +161,38 @@
                   </content>
                </TitledPane>
                <TitledPane animated="false" text="Your Offers">
-                 <content>
-                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                 </content>
+                  <content>
+                     <VBox fx:id="offerToAdd" prefHeight="623.0" prefWidth="1080.0">
+                        <children>
+                           <ScrollPane fx:id="scrollPane" prefHeight="602.0" prefWidth="1080.0">
+                              <content>
+                                 <VBox fx:id="offers" prefHeight="567.0" prefWidth="1078.0">
+                                    <padding>
+                                       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                    </padding>
+                                 </VBox>
+                              </content>
+                           </ScrollPane>
+                        </children>
+                     </VBox>
+                  </content>
                </TitledPane>
-             <TitledPane animated="false" prefHeight="466.0" prefWidth="600.0" text="Your Orders" />
+             <TitledPane animated="false" prefHeight="466.0" prefWidth="600.0" text="Your Orders">
+                  <content>
+                     <VBox fx:id="offerToAdd1" prefHeight="623.0" prefWidth="1080.0">
+                        <children>
+                           <ScrollPane fx:id="scrollPane1" prefHeight="602.0" prefWidth="1080.0">
+                              <content>
+                                 <VBox fx:id="offers1" prefHeight="567.0" prefWidth="1078.0">
+                                    <padding>
+                                       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                    </padding>
+                                 </VBox>
+                              </content>
+                           </ScrollPane>
+                        </children>
+                     </VBox>
+                  </content></TitledPane>
            </panes>
          </Accordion>
       </children>
