--- a/src/main/resources/static/fxml/form-new-offer.fxml
+++ b/src/main/resources/static/fxml/form-new-offer.fxml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import com.example.codingweek.javafxComponent.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.NewOfferController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.NewOfferController">
     <children>
         <Label layoutX="513.0" layoutY="119.0" text="New offer" />
-        <HBox layoutX="305.0" layoutY="240.0" prefHeight="275.0" prefWidth="411.0">
+        <HBox layoutX="334.0" layoutY="208.0" prefHeight="318.0" prefWidth="411.0">
             <children>
-                <VBox alignment="TOP_RIGHT" prefHeight="275.0" prefWidth="137.0">
+                <VBox alignment="TOP_RIGHT" prefHeight="316.0" prefWidth="138.0">
                     <children>
                         <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="100.0">
                             <children>
@@ -43,7 +39,7 @@
                                 <Label text="Price :  " />
                             </children>
                         </HBox>
-                  <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="138.0">
+                  <HBox alignment="CENTER_RIGHT" prefHeight="105.0" prefWidth="138.0">
                      <children>
                         <Label text="Image (Optional) :  " />
                      </children>
@@ -89,9 +85,10 @@
                         </Label>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="252.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="103.0" prefWidth="252.0" spacing="20.0">
                      <children>
-                        <Button mnemonicParsing="false" text="+" />
+                        <Button fx:id="addImageButton" mnemonicParsing="false" onAction="#addImage" text="+" />
+                        <ImageView fx:id="imageArea" fitHeight="84.0" fitWidth="85.0" onMouseClicked="#suppImage" pickOnBounds="true" preserveRatio="true" />
                      </children>
                   </HBox>
                     </children>
