--- a/src/main/resources/static/fxml/offerPage.fxml
+++ b/src/main/resources/static/fxml/offerPage.fxml
@@ -11,7 +11,7 @@
     <fx:include source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
    <VBox layoutY="35.0" prefHeight="323.0" prefWidth="600.0">
       <children>
-         <Label fx:id="pageOfferTitle" alignment="CENTER" contentDisplay="CENTER" prefHeight="46.0" prefWidth="614.0" text="Title">
+         <Label fx:id="offerPageTitle" alignment="CENTER" contentDisplay="CENTER" prefHeight="46.0" prefWidth="614.0" text="Title">
             <font>
                <Font name="System Bold" size="30.0" />
             </font>
@@ -49,7 +49,7 @@
                                  <Label text="Category :" GridPane.rowIndex="3" />
                                  <Label text="Description : " GridPane.rowIndex="4" />
                                  <Label fx:id="offerPageUser" text="Label" GridPane.columnIndex="1" />
-                                 <Label fx:id="userPageAvailability" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                 <Label fx:id="offerPageAvailability" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                  <Label fx:id="offerPagePrice" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                  <Label fx:id="offerPageCategory" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                  <Label fx:id="offerPageDescription" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
