--- a/src/main/resources/static/fxml/offerView.fxml
+++ b/src/main/resources/static/fxml/offerView.fxml
@@ -8,9 +8,9 @@
 
 <VBox fx:id="offer" prefHeight="126.0" prefWidth="558.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.OfferViewController">
         <children>
-            <VBox prefHeight="128.0" prefWidth="558.0">
+            <VBox fx:id="goToOffer" onMouseClicked="#goToOffer" prefHeight="128.0" prefWidth="558.0">
                 <children>
-                    <Label fx:id="offerTitle" onKeyPressed="#goToOffer" prefHeight="36.0" prefWidth="382.0" text="Titre">
+                    <Label fx:id="offerTitle" prefHeight="36.0" prefWidth="382.0" text="Titre">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
@@ -57,4 +57,7 @@
                 </children>
             </VBox>
         </children>
+   <padding>
+      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+   </padding>
     </VBox>
