--- a/src/main/resources/static/fxml/myProfile.fxml
+++ b/src/main/resources/static/fxml/myProfile.fxml
@@ -32,82 +32,82 @@
                   <content>
                      <HBox prefHeight="100.0" prefWidth="200.0">
                         <children>
-                           <VBox prefHeight="229.0" prefWidth="110.0">
+                           <VBox prefHeight="542.0" prefWidth="226.0">
                               <children>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="36.0" layoutY="6.0" text="Username :" />
+                                       <Label layoutX="166.0" layoutY="8.0" text="Username :" />
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="40.0" layoutY="6.0" text="Password :" />
+                                       <Label layoutX="170.0" layoutY="8.0" text="Password :" />
                                     </children></Pane>
                                  <Pane prefHeight="31.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="36.0" layoutY="6.0" text="Last name :" />
+                                       <Label layoutX="166.0" layoutY="6.0" text="Last name :" />
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="35.0" layoutY="6.0" text="First name :" />
+                                       <Label layoutX="165.0" layoutY="6.0" text="First name :" />
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="61.0" layoutY="6.0" text="Email :" />
+                                       <Label layoutX="191.0" layoutY="5.0" text="Email :" />
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="47.0" layoutY="6.0" text="Address :" />
+                                       <Label layoutX="177.0" layoutY="6.0" text="Address :" />
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="42.0" layoutY="5.0" text="ZIP Code :" />
+                                       <Label layoutX="172.0" layoutY="8.0" text="ZIP Code :" />
                                     </children></Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="68.0" layoutY="5.0" text="City :" />
+                                       <Label layoutX="199.0" layoutY="8.0" text="City :" />
                                     </children></Pane>
                               </children>
                            </VBox>
-                           <VBox prefHeight="229.0" prefWidth="182.0">
+                           <VBox prefHeight="542.0" prefWidth="350.0">
                               <children>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="userName" layoutX="77.0" layoutY="6.0" text="Label" />
+                                       <Label fx:id="userName" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="264.0" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="password" layoutX="77.0" layoutY="6.0" text="Label" />
+                                       <Label fx:id="password" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="254.0" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="lastName" layoutX="77.0" layoutY="6.0" text="Label" />
+                                       <Label fx:id="lastName" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="259.0" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="firstName" layoutX="77.0" layoutY="6.0" text="Label" />
+                                       <Label fx:id="firstName" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="266.0" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="email" layoutX="77.0" layoutY="6.0" text="Label" />
+                                       <Label fx:id="email" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="266.0" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="address" layoutX="77.0" layoutY="6.0" text="Label" />
+                                       <Label fx:id="address" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="262.0" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="zip" layoutX="77.0" layoutY="5.0" text="Label" />
+                                       <Label fx:id="zip" layoutX="77.0" layoutY="5.0" prefHeight="17.0" prefWidth="266.0" text="Label" />
                                     </children>
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="178.0">
                                     <children>
-                                       <Label fx:id="city" layoutX="77.0" layoutY="6.0" text="Label" />
+                                       <Label fx:id="city" layoutX="77.0" layoutY="6.0" prefHeight="17.0" prefWidth="264.0" text="Label" />
                                     </children>
                                  </Pane>
                               </children>
@@ -136,24 +136,16 @@
                                  </Pane>
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Button fx:id="modifyEmail" layoutX="58.0" layoutY="1.0" mnemonicParsing="false" onMouseClicked="#setEmail" text="Modifier" />
+                                       <Button fx:id="modifyEmail" layoutX="58.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#setEmail" text="Modifier" />
                                     </children>
                                  </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="165.0" />
                                  <Pane prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Button fx:id="modifyAddress" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#setAddress" text="Modifier" />
+                                       <Button fx:id="modifyAddress" layoutX="59.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#setAddress" text="Modifier" />
                                     </children>
                                  </Pane>
-                                 <Pane prefHeight="30.0" prefWidth="165.0">
-                                    <children>
-                                       <Button fx:id="modifyZip" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#setZip" text="Modifier" />
-                                    </children>
-                                 </Pane>
-                                 <Pane prefHeight="30.0" prefWidth="165.0">
-                                    <children>
-                                       <Button fx:id="modifyCity" layoutX="58.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#setCity" text="Modifier" />
-                                    </children>
-                                 </Pane>
+                                 <Pane prefHeight="30.0" prefWidth="165.0" />
                               </children>
                            </VBox>
                         </children>
