--- a/src/main/resources/static/fxml/form-new-offer.fxml
+++ b/src/main/resources/static/fxml/form-new-offer.fxml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.example.codingweek.javafxComponent.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.NewOfferController">
+<?import com.example.codingweek.javafxComponent.ComboPanel?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" stylesheets="@../css/newOffer.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.NewOfferController">
     <children>
         <Label layoutX="513.0" layoutY="119.0" text="New offer" />
         <HBox layoutX="334.0" layoutY="208.0" prefHeight="318.0" prefWidth="411.0">
@@ -88,7 +94,7 @@
                   <HBox alignment="CENTER_LEFT" prefHeight="103.0" prefWidth="252.0" spacing="20.0">
                      <children>
                         <Button fx:id="addImageButton" mnemonicParsing="false" onAction="#addImage" text="+" />
-                        <ImageView fx:id="imageArea" fitHeight="84.0" fitWidth="85.0" onMouseClicked="#suppImage" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView id="image" fx:id="imageArea" fitHeight="84.0" fitWidth="85.0" onMouseClicked="#suppImage" pickOnBounds="true" preserveRatio="true" />
                      </children>
                   </HBox>
                     </children>
