--- a/src/main/resources/static/fxml/orderViews.fxml
+++ b/src/main/resources/static/fxml/orderViews.fxml
@@ -24,5 +24,10 @@
                 <Font size="9.0" />
             </font>
         </Label>
+        <Label fx:id="recap" layoutX="181.0" layoutY="115.0">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </Label>
     </children>
 </AnchorPane>
